fix: update spacings

--- a/src/scss/main/widgets/_webinar.scss
+++ b/src/scss/main/widgets/_webinar.scss
@@ -137,6 +137,11 @@
     }
 }
 .widget.post-webinar {
+
+    .widget-description > div {
+        padding: 25px;
+    }
+
     .-bottomline {
         color: #333333;
     }
